rename views to *_view and classnames to *View, make views use new models

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,7 +16,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     transform: $value;
 }
 
-.tesuji-grid {
+.tesuji-board {
     position: relative;
     margin: 12px;
     background-color: #ffcc66;
