--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+// $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
-@import 'sass-bootstrap/lib/bootstrap';
+// @import 'sass-bootstrap/lib/bootstrap';
 
 @font-face {
   font-family: 'Open Sans';
@@ -23,104 +23,124 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     height: 600px;
     width: 600px;
 
-    table {
+    .tesuji-grid {
         position: absolute;
-        z-index: 0;
-        left: 30px;
-        top: 30px;
-        border: 1px solid black;
-        
-        td {
-            height: 30px;
-            width: 30px;
-            border: 1px solid black;
-        }
-    }
+        margin: 15px;
+        height: 570px;
+        width: 570px;
+        z-index: 2;
 
-    .tesuji-labels {
+        table {
+          position: absolute;
+          z-index: 0;
+          left: 15px;
+          top: 15px;
+          border: 1px solid black;
+          border-collapse: collapse;
+          border-spacing: 0;
+        }
+
+        td {
+            height: 29px;
+            width: 29px;
+            border: 1px solid black;
+            padding: 0px;
+        }
+
         .label {
             position: absolute;
             z-index: 1;
             font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
             font-size: 9px;
-            text-align: center;  
+            text-align: center;
             color: black;
             padding: 0px;
         }
 
         @for $i from 0 through 18 {
-            $offset-x: 555 - (30 * $i) + px;
-            $offset-y: 15 + (30 * $i) + px;
+            $offset-x: 540 - (30 * $i) + px;
+            $offset-y: (30 * $i) + px;
 
             .label-top-#{$i} {
               @extend .label;
               height: 15px;
               width: 30px;
               padding-top: 2px;
-              @include transform(translate($offset-y, 0px));
+              @include transform(translate($offset-y, -15px));
             }
             .label-bottom-#{$i} {
               @extend .label;
               height: 15px;
               width: 30px;
-              @include transform(translate($offset-y, 585px));
+              @include transform(translate($offset-y, 570px));
             }
             .label-left-#{$i} {
               @extend .label;
               height: 30px;
               width: 15px;
               padding-top: 10px;
-              @include transform(translate(0px, $offset-x));
+              @include transform(translate(-15px, $offset-x));
             }
             .label-right-#{$i} {
               @extend .label;
               height: 30px;
               width: 15px;
               padding-top: 10px;
-              @include transform(translate(585px, $offset-x));
+              @include transform(translate(570px, $offset-x));
             }
         }
-    }
-    
-    .intersection {
-      position: absolute;
-      z-index: 1;
-      height: 30px;
-      width: 30px;
-      
-      .stone {
-        position: absolute;
-        z-index: 2;
-        top: 2px;
-        left: 2px;
-        height: 26px;
-        width: 26px;
-        border-radius: 50%;
-        &.black {
+
+        .dot {
+          position: absolute;
+          top: 13px;
+          left: 13px;
+          height: 5px;
+          width: 5px;
           background-color: black;
         }
-        &.white {
-          border: 1px solid black;
-          background-color: white;
+    }
+
+    .intersections {
+      position: absolute;
+      margin: 15px;
+      height: 570px;
+      width: 570px;
+      z-index: 3;
+
+      .intersection {
+        position: absolute;
+        z-index: 3;
+        height: 30px;
+        width: 30px;
+
+        .stone {
+          position: absolute;
+          z-index: 2;
+          top: 3px;
+          left: 3px;
+          height: 25px;
+          width: 25px;
+          border-radius: 50%;
+          &.preview {
+            opacity: 0.4;
+          }
+          &.black {
+            background-color: black;
+          }
+          &.white {
+            border: 1px solid black;
+            background-color: white;
+          }
         }
       }
     }
-    .dot {
-      position: absolute;
-      top: 13px;
-      left: 13px;
-      height: 5px;
-      width: 5px;
-      background-color: black;
-    }
-    
+
     @for $i from 0 through 18 {
       @for $j from 0 through 18 {
-        $offset-x: 15 + (30 * $i) + px;
-        $offset-y: 555 - (30 * $j) + px;
-        
+        $offset-x: (30 * $i) + px;
+        $offset-y: 540 - (30 * $j) + px;
+
         .intersection-#{$i}-#{$j} {
-          @extend .intersection;
           @include transform(translate($offset-x, $offset-y));
         }
       }
