--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -646,19 +646,44 @@
       width: 30px; }
       .tesuji-board .intersections .intersection .stone {
         position: absolute;
-        z-index: 2;
         top: 3px;
         left: 3px;
-        height: 25px;
-        width: 25px;
         border-radius: 50%; }
         .tesuji-board .intersections .intersection .stone.preview {
-          opacity: 0.4; }
+          opacity: 0.4;
+          z-index: 2; }
         .tesuji-board .intersections .intersection .stone.black {
-          background-color: black; }
+          height: 24px;
+          width: 24px;
+          background: -webkit-linear-gradient(285deg, #000000, #505050);
+          /* For Safari 5.1 to 6.0 */
+          background: -o-linear-gradient(285deg, #000000, #505050);
+          /* For Opera 11.1 to 12.0 */
+          background: -moz-linear-gradient(285deg, #000000, #505050);
+          /* For Firefox 3.6 to 15 */
+          background: linear-gradient(285deg, #000000, #505050);
+          /* Standard syntax */
+          z-index: 3; }
         .tesuji-board .intersections .intersection .stone.white {
-          border: 1px solid black;
-          background-color: white; }
+          height: 24px;
+          width: 24px;
+          background: -webkit-linear-gradient(285deg, #D0D0D0, #ffffff);
+          /* For Safari 5.1 to 6.0 */
+          background: -o-linear-gradient(285deg, #D0D0D0, #ffffff);
+          /* For Opera 11.1 to 12.0 */
+          background: -moz-linear-gradient(285deg, #D0D0D0, #ffffff);
+          /* For Firefox 3.6 to 15 */
+          background: linear-gradient(285deg, #D0D0D0, #ffffff);
+          /* Standard syntax */
+          z-index: 3; }
+        .tesuji-board .intersections .intersection .stone.shadow {
+          height: 24px;
+          width: 24px;
+          top: 4px;
+          left: 4px;
+          opacity: 0.2;
+          background-color: black;
+          z-index: 2; }
   .tesuji-board .intersection-0-0 {
     -webkit-transform: translate(0px, 540px);
     -moz-transform: translate(0px, 540px);
