--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,13 @@
     transform: $value;
 }
 
+@mixin gradient($args...) {
+  background: -webkit-linear-gradient($args); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient($args); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient($args); /* For Firefox 3.6 to 15 */
+  background: linear-gradient($args); /* Standard syntax */
+}
+
 .tesuji-board {
     position: relative;
     margin: 12px;
@@ -115,21 +122,35 @@
 
         .stone {
           position: absolute;
-          z-index: 2;
           top: 3px;
           left: 3px;
-          height: 25px;
-          width: 25px;
           border-radius: 50%;
           &.preview {
             opacity: 0.4;
+            z-index: 2;
           }
           &.black {
-            background-color: black;
+            height: 24px;
+            width: 24px;
+            // background-color: black;
+            @include gradient(285deg, black, #505050);
+            z-index: 3;
           }
           &.white {
-            border: 1px solid black;
-            background-color: white;
+            height: 24px;
+            width: 24px;
+            // background-color: #f7f7f7;
+            @include gradient(285deg, #D0D0D0, white);
+            z-index: 3;
+          }
+          &.shadow {
+            height: 24px;
+            width: 24px;
+            top: 4px;
+            left: 4px;
+            opacity: 0.2;
+            background-color: black;
+            z-index: 2;
           }
         }
       }
